# timbre

./: .gitignore  CHANGELOG.md  CMakeLists.txt  Dockerfile  Dockerfile.app  LICENSE  Makefile  README.md  build.zig
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: issue.md
.github/workflows/: ci-cd.yml  ci.yml  discord.yml  docker-publish.yml  release.yml
cfg/: auto-changelog  commitlintrc.json  setup.sh  timbre.toml
cmake/: debian.cmake  static_analysis.cmake  toolchain.cmake  toolchain_arm64.cmake  toolchain_x86_64.cmake  version.cmake
docs/: COMMIT_CONVENTION.md  CONTRIBUTING.md  VERSION.md  WORKFLOW.md  architecture.md  kubernetes-deployment.md  versioning.md
inc/CLI/: CLI11.hpp
inc/timbre/: config.h  log.h  timbre.h  version.h.in
k8s/: Dockerfile.app  configmap.yaml  deployment.yaml  kind-config.yaml  namespace.yaml  service.yaml
k8s/scripts/: build-images.sh  deploy.sh  setup-cluster.sh
pkg/: build_deb.sh  version.txt
scripts/: build-images.sh  deploy.sh  setup-cluster.sh
src/: config.cpp  log.cpp  main.cpp  timbre.cpp
tests/: interface.c  interface.h  test.zig  test_timbre.cpp
zig/: common.zig
